# rules_spm_implicit_include_dir_issue

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Package.swift  README.md
MyApp/: BUILD  main.swift
MyClangLibrary/: Package.swift
MyClangLibrary/lib/include/MyClangLibrary/: API.h
MyClangLibrary/lib/src/: lib.c
